src-liberty_parse-2.6/test/example.2libnam.lib
library(a b) {	
	technology(cmos);

	cell(AN2){
		area : 2;
		pin(A, B){
			direction : input;
			capacitance : 1;
		}
		pin(Z){
			direction : output;
			function : "A ^ B";
			timing () {
				intrinsic_rise  : 0.49;
				intrinsic_fall  : 0.77;
				rise_resistance : 0.1443;
				fall_resistance : 0.0523;
				related_pin : "A B";
			}
		}	
	}
	cell(OR2){
		area : 2;
		pin(A, B){
			direction : input;
			capacitance : 1;
		}
		pin(Z){
			direction : output;
			function : "A + B";
			timing () {
				intrinsic_rise  : 0.38;
				intrinsic_fall  : 0.85;
				rise_resistance : 0.1443;
				fall_resistance : 0.0589;
				related_pin : "A B";
			}
		}	
	}
}
